spotify/assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
#logo {
    display: inline-block;
    margin-top: 10px; 
    margin-right: 10px;
    height: 30px;
    width: auto; 
    border-radius: 10%; 
  }
.jumbotron{
    background-color: rgba(45, 45, 45, 0.5);
}

h1{
    text-align: center;
    background: -webkit-linear-gradient(#1DB954, black);
    -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  /* color: #1DB954; */
  text-shadow: 5px 5px white;
  font-size: 100px;
}
body{
    font-family: 'Permanent Marker', cursive;
    background-image: linear-gradient(to right,#1DB954, blue);
    font-size: 40px;
    color: white;
}
.container{
display: flex;
  justify-content: center;
  flex-direction: row;
}
.row{
    margin-left: 20px;
    margin-right: 20px;
}
button:hover { 
    text-decoration: none; 
    color: white;
    background: black;
}
input[type=submit]:hover{
    color: white;
    background: black;
}
input[type=text]{
    float: center;
    display: flex;
    width:100%;
} 
a{
    color:white; 
    font-size: 30px;
}
h5{
    color:white;
}
.card-body .text-center{
    display: flex;
}
.card-header{
    background-color:black;
}
.card{
    background-color: rgba(45, 45, 45, 0.5);
    text-align: center;
    float: center;
    display: flex;
    margin-top: 20px;
    padding: 20px;
    /* width: 400px; */
}

footer {
    top: 0;
    padding: 0px;
    width: 100%;
    display: flex;
    flex-direction: column;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align:center;
    color:#ffffff;
    padding:0px 0px -38px 0px;
    box-sizing:border-box;
    margin-top: 30px;
    font-size: 15px;
    text-align: center;
    padding: 20px;
    }

 

